--- a/docs/en/guide/live-DSL/index.mdx
+++ b/docs/en/guide/live-DSL/index.mdx
@@ -1,20 +1,19 @@
-# 基本概念
+# Concepts
 
 
-Live 语言是一个专门用于 UI 组件和样式的领域特定语言（DSL）。它的基本结构是以节点为单位，每个节点可以包含属性和子节点。
+Live language is a domain-specific language (DSL) specifically designed for UI components and styling. Its basic structure is node-based, where each node can contain properties and child nodes.
 
-`Live DSL`是在运行时实时编译的，支持热重载和动态更新。
+`Live DSL` is compiled in real-time at runtime, supporting hot reloading and dynamic updates.
 
-这种设计适合的场景如下：
+This design is suitable for the following scenarios:
 
-- 需要高度动态性的UI系统
-- 需要热重载的开发环境
-- 需要运行时修改UI的场景
+1. UI systems requiring high dynamism
+2. Development environments needing hot reload capabilities
+3. Scenarios requiring runtime UI modifications
 
+## Live DSL Lifecycle
 
-## 生命周期
-
-Live DSL 运行时编译大概过程如下：
+The runtime compilation process of Live DSL roughly follows these steps:
 
 ```mermaid
 graph TD
@@ -55,12 +54,12 @@ L[Runtime Events] --> H
 
 style Live Compiler fill:#f9f,stroke:#333,stroke-width:2px
 ```
-### 1. 输入阶段
+### 1. Input Phase
 
-第一步输入 Live Documents 。
+The first step involves inputting Live Documents.
 
 ```rust
-// Live DSL 代码
+// Live DSL code
 Button = {
     width: 100,
     height: 50,
@@ -68,9 +67,9 @@ Button = {
 }
 ```
 
-### 2. Live Compiler 阶段
+### 2. Live Compiler Phase
 
-`Live Tokenizer` 分词
+Live Tokenizer tokenization:
 
 ```rust
 pub struct TokenWithSpan {
@@ -78,7 +77,7 @@ pub struct TokenWithSpan {
     pub span: TextSpan
 }
 
-// 将代码转换成 token 流
+// Convert code into token stream
 [
     Token::Ident("Button"),
     Token::Punct("="),
@@ -89,8 +88,7 @@ pub struct TokenWithSpan {
     ...
 ]
 ```
-
-`Live Parser` 解析
+`Live Parser` parsing:
 
 ```rust
 pub struct LiveParser<'a> {
@@ -100,27 +98,27 @@ pub struct LiveParser<'a> {
     // ...
 }
 
-// 将 token 流解析成初始的节点结构
+// Parse token stream into initial node structure
 ```
-`Live Original` 存储了从源代码解析得到的原始节点数据，包含：
+`Live Original` stores the raw node data parsed from source code, including:
 
-- 保存了完整的源码映射信息
-- 包含了设计时和编辑时的元信息
-- 作为展开过程的输入
-- 支持错误定位和报告
+- Complete source code mapping information
+- Design-time and edit-time metadata
+- Input for expansion process
+- Support for error location and reporting
 
 ```rust
 pub struct LiveOriginal {
-    pub nodes: Vec<LiveNode>,           // 解析出的节点列表
-    pub edit_info: Vec<LiveNode>,       // 编辑相关的元数据节点
-    pub design_info: Vec<LiveDesignInfo>, // 设计阶段的信息
-    pub tokens: Vec<TokenWithSpan>,     // 源代码的token流
+    pub nodes: Vec<LiveNode>,           // Parsed node list
+    pub edit_info: Vec<LiveNode>,       // Edit-related metadata nodes
+    pub design_info: Vec<LiveDesignInfo>, // Design phase information
+    pub tokens: Vec<TokenWithSpan>,     // Source code token stream
 }
 ```
-比如：
+For example:
 
 ```rust
-// 源代码
+// Source code
 Button = {
     width: 100,
     height: 50,
@@ -129,30 +127,32 @@ Button = {
     }
 }
 
-// 解析成 LiveOriginal.nodes
+// Parsed into LiveOriginal.nodes
 [
     LiveNode { id: "Button", value: Object },
     LiveNode { id: "width", value: Int64(100) },
     LiveNode { id: "height", value: Int64(50) },
     LiveNode { id: "label", value: Object },
     LiveNode { id: "text", value: String("Click me") },
-    LiveNode { value: Close },  // label的结束
-    LiveNode { value: Close }   // Button的结束
+    LiveNode { value: Close },  // End of label
+    LiveNode { value: Close }   // End of Button
 ]
 ```
-`LiveOriginal` 相当于 Live DSL 的 AST(抽象语法树)。
+`LiveOriginal` effectively serves as the AST (Abstract Syntax Tree) of Live DSL.
 
-### 3. 展开阶段
+### 3.  Expansion Phase
 
-展开阶段是对 DSL 中的组件声明进行扩展(expand)，比如处理属性展开、继承、建立组件关系，并设置运行时上下文。这为后续的渲染和交互打下基础。
+The expansion phase extends component declarations in the DSL, handling property expansion, inheritance, establishing component relationships, and setting runtime context. This lays the foundation for subsequent rendering and interaction.
+
+For example:
 
 ```rust
-// 简写形式
+// Shorthand form
 Button = <Button> {
     text: "Click me"
 }
 
-// 展开后
+// After expansion
 Button = <Button> {
     text: "Click me",
     draw_text: {
@@ -161,7 +161,7 @@ Button = <Button> {
     draw_bg: {...}
 }
 ```
-Live Expander
+Live Expander:
 
 ```rust
 pub struct LiveExpander<'a> {
@@ -171,9 +171,9 @@ pub struct LiveExpander<'a> {
     pub errors: &'a mut Vec<LiveError>,
 }
 
-// 处理继承、引用等关系
+// Handles inheritance, references, and other relationships
 ```
-Live Expanded
+Live Expanded:
 
 ```rust
 pub struct LiveExpanded {
@@ -181,22 +181,22 @@ pub struct LiveExpanded {
 }
 ```
 
-### 4. 实例化阶段
+### 4. Instantiation Phase
 
-BTreeMap 具有以下特点：
+BTreeMap has several characteristics that make it particularly suitable:
 
-- BTreeMap 默认按 Key 排序，可以保证组件初始化、渲染和销毁的顺序稳定性；正确处理父子组件间的依赖关系；方便调试和日志记录。
-- BTreeMap 的树状结构让 LiveNode 数据的内存布局更加紧凑。相关组件数据倾向于在内存中相邻，对缓存友好，可能使实际性能比 HashMap 更好。BTreeMap 的空间利用率通常比 HashMap 高。
-- BTreeMap 的树结构更加稳定，增删组件不会导致大规模内存重分配，性能可以更好的预测。
+- BTreeMap sorts by key by default, ensuring stability in component initialization, rendering, and destruction order; properly handling parent-child component dependencies; facilitating debugging and logging.
+- BTreeMap's tree structure makes LiveNode data memory layout more compact. Related component data tends to be adjacent in memory, benefiting cache performance and potentially offering better performance than HashMap. BTreeMap typically has higher space utilization than HashMap.
+- BTreeMap's tree structure is more stable, with component additions and removals not causing large-scale memory reallocations, leading to more predictable performance.
 
-所以它适合用于 Widget Registry 。
+Therefore, it's well-suited for Widget Registry:
 
 ```rust
 pub struct WidgetRegistry {
     pub map: BTreeMap<LiveType, (LiveComponentInfo, Box<dyn WidgetFactory>)>,
 }
 ```
-Widget 实例
+Widget Instance:
 
 ```rust
 pub trait Widget: WidgetNode {
@@ -206,64 +206,64 @@ pub trait Widget: WidgetNode {
 }
 
 pub trait WidgetNode: LiveApply {
-    // 获取设计时组件实例
+    // Get design-time component instance
     fn widget_design(&mut self) -> Option<&mut dyn WidgetDesign> {
         return None;
     }
-    // 通过 UID 查找组件
+    // Find component by UID
     fn uid_to_widget(&self, _uid: WidgetUid) -> WidgetRef;
-    // 查找组件
+    // Find components
     fn find_widgets(&self, _path: &[LiveId], _cached: WidgetCache, _results: &mut WidgetSet);
-    // 计算布局信息
+    // Calculate layout information
     fn walk(&mut self, _cx: &mut Cx) -> Walk;
-    // 获取区域
+    // Get area
     fn area(&self) -> Area;
-    // 重绘
+    // Redraw
     fn redraw(&mut self, _cx: &mut Cx);
 }
 ```
-Widget Node  是 UI 组件树中的基本节点，它提供基础的布局、遍历和绘制能力，且负责组件的区域管理和重绘，支持组件查找和导航。 同时是 Widget trait 的基础要求。
+Widget Node is the basic node in the UI component tree, providing fundamental layout, traversal, and drawing capabilities. It handles component area management and redrawing, supports component lookup and navigation, and serves as the basic requirement for the Widget trait.
 
-一个 Widget 实例可以包含多个 Node，每个 Node 负责特定的底层功能。Widget 通过组合 Node 实现完整功能。
+A Widget instance can contain multiple Nodes, with each Node responsible for specific low-level functionality. Widgets achieve complete functionality through Node composition.
 
-### 5. 运行时交互
+### 5. Runtime Interaction
 
 ```rust
 impl Widget {
     fn handle_event(&mut self, cx: &mut Cx, event: &Event, scope: &mut Scope) {
-        // 处理事件
+        // Event handling
     }
 
     fn draw(&mut self, cx: &mut Cx2d, scope: &mut Scope) {
-        // 渲染逻辑
+        // Rendering logic
     }
 }
 ```
-Widget 通过 `Event`、`Action` 和 `Scope` 这三个重要机制来实现运行时交互。其细节在事件章节详细介绍。
+Widgets implement runtime interaction through three crucial mechanisms: `Event`, `Action`, and `Scope`. Their details will be covered in the events chapter.
 
 ## Live Node
 
-Live Node 可以理解为解析以后的每个 AST 节点。
+Live Node can be understood as each AST node after parsing.
 
-### 1. 节点的基本结构
+### 1. Basic Node Structure
 
-在代码实现中，节点由 LiveNode 结构表示：
+In code implementation, nodes are represented by the `LiveNode` structure:
 
 ```rust
 pub struct LiveNode {
-    pub origin: LiveNodeOrigin,  // 节点的源信息
-    pub id: LiveId,             // 节点的标识符
-    pub value: LiveValue,       // 节点的值
+    pub origin: LiveNodeOrigin,  // Node source information
+    pub id: LiveId,             // Node identifier
+    pub value: LiveValue,       // Node value
 }
 ```
 
-### 2. 节点的类型(LiveValue)
+### 2. Node Types (LiveValue)
 
-节点可以包含多种类型的值：
+Nodes can contain multiple types of values:
 
 ```rust
 pub enum LiveValue {
-    // 基础值类型
+    // Basic value types
     None,
     Bool(bool),
     Int64(i64),
@@ -271,47 +271,47 @@ pub enum LiveValue {
     Color(u32),
     String(Arc<String>),
 
-    // 复合类型
-    Object,            // 对象节点
-    Array,            // 数组节点
-    Clone{...},       // 克隆/继承节点
-    Class{...},       // 类定义节点
+    // Composite types
+    Object,            // Object node
+    Array,            // Array node
+    Clone{...},       // Clone/inheritance node
+    Class{...},       // Class definition node
 
-    // DSL 特殊类型
-    DSL{...},         // DSL代码块
-    Import(...),      // 导入声明
+    // DSL special types
+    DSL{...},         // DSL code block
+    Import(...),      // Import declaration
 }
 ```
 
-### 3. 节点的组织方式
+### 3. Node Organization
 
-- 基础节点
+- Basic nodes
 
 ```rust
-Button = {  // 这是一个节点
-    width: 100,    // 这也是一个节点
-    height: 50,    // 这也是一个节点
+Button = {  // This is a node
+    width: 100,    // This is also a node
+    height: 50,    // This is also a node
 }
 ```
-- 嵌套节点
+- Nested nodes
 
 ```rust
-Window = {                  // 父节点
-    header = {             // 子节点
-        title = {          // 孙节点
-            text: "Hello"  // 叶节点
+Window = {                  // Parent node
+    header = {             // Child node
+        title = {          // Grandchild node
+            text: "Hello"  // Leaf node
         }
     }
 }
 ```
-- 数组节点
+- Array nodes
 
 ```rust
 List = {
-    items: [          // 数组节点
-        {text: "1"},  // 子节点 1
-        {text: "2"},  // 子节点 2
-        {text: "3"}   // 子节点 3
+    items: [          // Array node
+        {text: "1"},  // Child node 1
+        {text: "2"},  // Child node 2
+        {text: "3"}   // Child node 3
     ]
 }
 ```
