--- a/docs/en/guide/live-DSL/props-inherit.mdx
+++ b/docs/en/guide/live-DSL/props-inherit.mdx
@@ -1,37 +1,36 @@
-# 属性继承
+# Inheritance
 
-继承的组件实例可以:
+Inherited component instances can:
 
-1. 覆盖父组件的属性
-2. 添加新的属性
-3. 扩展新的子组件实例
-
+1. Override parent component properties
+2. Add new properties
+3. Extend with new child component instances
 
 ```rust
-// 基础卡片组件
+// Base card component
 Card = {{MyView}} {
-    // 基础属性
+    // Base properties
     background_color: #fff,
     corner_radius: 4.0,
     shadow_color: #0007,
 
-    // 基础布局
+    // Base layout
     flow: Down,
     spacing: 10
 }
 
-// 产品卡片扩展
+// Product card extension
 ProductCard = <Card> {
-    // 1. 覆盖父组件属性
-    background_color: #f5f5f5,  // 覆盖背景色
-    corner_radius: 8.0,         // 覆盖圆角
+    // 1. Override parent component properties
+    background_color: #f5f5f5,  // Override background color
+    corner_radius: 8.0,         // Override corner radius
 
-    // 2. 添加新的属性
+    // 2. Add new properties
     width: 200,
     height: 300,
-    border_width: 1.0,         // 新增边框
+    border_width: 1.0,         // Add border
 
-    // 3. 添加子组件
+    // 3. Add child components
     image_container = <View> {
         height: 160
     }
@@ -52,13 +51,13 @@ ProductCard = <Card> {
     }
 }
 
-// 可以进一步继承和扩展
+// Can be further inherited and extended
 FeaturedProductCard = <ProductCard> {
-    // 覆盖属性
+    // Override properties
     height: 350,
     background_color: #fff0f0,
 
-    // 添加新组件
+    // Add new components
     badge = <Label> {
         text: "Featured",
         background_color: #f00,
@@ -66,13 +65,13 @@ FeaturedProductCard = <ProductCard> {
     }
 }
 ```
-在 Live DSL 里 ProductCard = \<Card\> 这种方法一般是代表「引用」一个组件。
+In Live DSL, ProductCard = \<Card\> typically represents "referencing" a component.
 
-Live 继承系统的特点:
+Live inheritance system characteristics:
 
-## 继承方式
+## Inheritance method
 
-### 1. 属性继承
+### 1. Property Inheritance
 
 ```rust
 ParentView = {{View}} {
@@ -81,15 +80,15 @@ ParentView = {{View}} {
 }
 
 ChildView = <ParentView> {
-    // 继承 color 和 spacing
-    // 覆盖 color
+    // Inherits color and spacing
+    // Overrides color
     color: #00f,
-    // 添加新属性
+    // Adds new property
     margin: 20
 }
 ```
 
-### 2. 布局继承
+### 2. Layout Inheritance
 
 ```rust
 CardBase = {{View}} {
@@ -102,8 +101,8 @@ CardBase = {{View}} {
 }
 
 CustomCard = <CardBase> {
-    // 继承布局属性
-    // 修改子组件
+    // Inherits layout properties
+    // Modifies child component
     header = <View> {
         height: 60,
         background_color: #f00
@@ -111,7 +110,7 @@ CustomCard = <CardBase> {
 }
 ```
 
-### 3. 动画继承
+### 3. Animation Inheritance
 
 ```rust
 ButtonBase = {{Button}} {
@@ -126,9 +125,9 @@ ButtonBase = {{Button}} {
 }
 
 CustomButton = <ButtonBase> {
-    // 继承动画
+    // Inherits animation
     animator: {
-        // 添加新的动画状态
+        // Adds new animation state
         pressed = {
             default: off
             on = {
@@ -139,7 +138,7 @@ CustomButton = <ButtonBase> {
 }
 ```
 
-### 4. 事件处理继承
+### 4. Event Handling Inheritance
 
 ```rust
 ClickableView = {{View}} {
@@ -148,8 +147,8 @@ ClickableView = {{View}} {
 }
 
 InteractiveCard = <ClickableView> {
-    // 继承交互行为
-    // 添加视觉反馈
+    // Inherits interaction behavior
+    // Adds visual feedback
     animator: {
         pressed = {
             default: off
@@ -162,12 +161,12 @@ InteractiveCard = <ClickableView> {
     }
 }
 ```
-## 继承式创建新组件
+## Creating New Components Through Inheritance
 
 ```rust
 live_design!{
-	// 定义一个通用的按钮样式
-    // 继承自 Button
+    // Define a common button style
+    // Inherit from Button
     MyButton = {{MyButton}} <Button> {
         width: 200,
         height: 50,
@@ -182,56 +181,55 @@ live_design!{
 
 #[derive(Live,Widget)]
 pub struct MyButton {
-    // 继承 Button 的所有功能
+    // Inherit all Button functionality
     #[deref]
     button: Button,
     #[rust]
     initialized: bool,
 }
 ```
-注意这种写法： MyButton = \{\{MyButton\}\} \<Button\> ，是基于已有 Button Widget  进行继承性创建自己的 MyButton 组件。
+Note this syntax: `MyButton = {{MyButton}} <Button>`, which creates your own `MyButton` component by inheriting from the existing `Button` Widget.
 
-这种方式适合需要在扩展现有组件时使用。
+This approach is suitable when extending existing components.
 
-## 继承的建议
+## Inheritance Usage Guidelines
 
-1. 保持继承层次浅。避免过深的继承链，让组件关系容易理解。
-2. 明确命名约定。基础组件使用 `Base/Common` 前缀，变体使用功能相关的名称。
-3. 适度使用继承。不是所有组件都需要继承，有时直接创建更合适。
+1. Keep inheritance hierarchy shallow. Avoid deep inheritance chains for easier understanding of component relationships.
+2. Use clear naming conventions. Base components use `Base/Common` prefix, variants use functionality-related names.
+3. Use inheritance judiciously. Not all components need inheritance; sometimes direct creation is more appropriate.
 
-## Rust 结构体的继承
+## Rust Struct Inheritance
 
-Rust 结构体中的 #[deref] 属性宏：
+The #[deref] attribute macro in Rust structs:
 
 ```rust
 struct DrawWave {
-    #[deref] draw_super: DrawQuad,  // 继承 DrawQuad 的字段和方法
+    #[deref] draw_super: DrawQuad,  // Inherit DrawQuad's fields and methods
     #[live] gain: f32,
     #[live] vu_left: f32,
 }
 ```
-这是一个编译期的 Rust trait 实现机制：
+This is a compile-time Rust trait implementation mechanism:
 
-- 通过 `makepad_derive_widget` 宏生成对 `DrawQuad` 的 `Deref/DerefMut` trait 实现
-- 允许 `DrawWave` 直接访问 `DrawQuad` 的字段和方法
-- 是 Rust 语言层面的“委托/继承”模式（用 Deref 模拟继承是个反模式，但用在 Makepad 框架中正好）
+- Uses `makepad_derive_widget` macro to generate `Deref/DerefMut` trait implementation for `DrawQuad`
+- Allows `DrawWave` to directly access `DrawQuad`'s fields and methods
+- Represents a Rust language-level "delegation/inheritance" pattern (using Deref to simulate inheritance is an anti-pattern, but works well in the Makepad framework)
 
-两者的配合使用：
+Using both together:
 
 ```rust
-// Rust 层的基础组件实现
+// Rust-level base component implementation
 struct Button {
-    #[deref] draw_super: DrawQuad, // 继承绘制能力
+    #[deref] draw_super: DrawQuad, // Inherit drawing capabilities
     #[live] color: Vec4
 }
 
-// Live DSL 层的组件定制
-DefaultButton = <Button> {  // 引用并覆盖属性
+// Live DSL-level component customization
+DefaultButton = <Button> {  // Reference and override properties
     color: #f00
 }
 ```
+Key differences between `#[deref]` and referencing component instances in Live DSL:
 
-`#[deref]` 与 Live DSL 中引用组件实例的关键区别：
-
-1. `#[deref]` 是 Rust 编译期的类型系统特性，用于实现组件的基础功能继承，并且可以委托调用相关的方法。
-2. Live DSL 中引用组件主要是用于创建组件结构。
+1. `#[deref]` is a Rust compile-time type system feature used to implement basic component functionality inheritance and method delegation.
+2. Live DSL component referencing is primarily used for creating component structures.
